# expense-log-mcp-py

./: .env.example  .gitignore  README.md  pyproject.toml  schema.prisma
.github/workflows/: ci.yml
src/auth/: __init__.py  bearer_token_verifier.py
src/expense_log_mcp/: database.py  main.py  models.py
src/expense_log_mcp/auth/: __init__.py  bearer_token_verifier.py
src/expense_log_mcp/tools/: __init__.py  add_expense.py  delete_expense.py  get_expense.py  get_expense_categories.py  get_grouped_expenses.py
src/tools/: __init__.py  delete_expense.py  get_grouped_expenses.py
tests/tools/: test_add_expense.py  test_delete_expense.py  test_get_expense.py  test_get_expense_categories.py  test_get_grouped_expenses.py
