[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "expense-log-mcp"
version = "0.1.0"
description = "A MCP server that provides tools for logging expenses."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cuid2>=2.0.1",
    "fastmcp>=2.12.4",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.43",
    "psycopg2-binary>=2.9.9",
]

[project.optional-dependencies]
dev = [
    "black>=25.9.0",
    "flake8>=7.3.0",
    "pytest>=8.4.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
